# google-scholar-badge

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
google_scholar_badge/: main.py
