[tool.poetry]
name = "google-scholar-badge"
version = "0.1.0"
description = "Get your google scholar citation badge"
authors = ["Dixing Xu <dixingxu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
uvicorn = "^0.31.0"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.115.0"
httpx = "^0.27.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
